<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/dummy_value3"
            android:textSize="32sp">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/input_nilai_celcius"
            android:layout_marginLeft="16dp"
            android:textSize="20sp"
            >

        </TextView>

        <EditText
            android:id="@+id/edt_celcius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:lines="5"
            >

        </EditText>

        <TextView
            android:id="@+id/edt_hasil1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/hasil_konversi1"
            android:textSize="15sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/edt_hasil2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/hasil_konversi2"
            android:textSize="15sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/edt_hasil3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/hasil_konversi3"
            android:textSize="15sp"
            android:textStyle="bold">

        </TextView>


        <Button
            android:id="@+id/edt_btn_suhu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="25dp"
            android:text="@string/move_activity2">

        </Button>



    </LinearLayout>
</ScrollView>