<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/dummy_value2"
            android:textSize="32sp">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/input_nilai_rupiah"
            android:layout_marginLeft="16dp"
            android:textSize="20sp"
            >

        </TextView>

        <EditText
            android:id="@+id/edt_dolar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:lines="5"
            android:lineHeight="40dp"
            android:hint="Rp."
            android:padding="16dp">

        </EditText>

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/hasil_konversi"
            android:textSize="15sp"
            android:maxLength="5"
            android:textStyle="bold">

        </TextView>



        <Button
            android:id="@+id/btn_rupiah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="25dp"
            android:text="@string/move_activity1">

        </Button>




    </LinearLayout>
</ScrollView>